--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.1",
+        "vue-js-toggle-button": "^1.2.2"
     }
 }
